# ml

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ml.yml
app/: CMakeLists.txt
app/linear_algebra/: .main.cpp.swp  CMakeLists.txt  main.cpp
app/tests/: CMakeLists.txt
app/tests/armadillo/: CMakeLists.txt
app/tests/dlib/: CMakeLists.txt  main.cpp
app/tests/eigen/: CMakeLists.txt  main.cpp
app/tests/mlpack/: CMakeLists.txt  main.cpp
app/tests/plotcpp/: CMakeLists.txt
app/tests/rapidjson/: CMakeLists.txt
app/tests/shark/: CMakeLists.txt  main.cpp
app/tests/torch/: .CMakeLists.txt.swp  CMakeLists.txt
app/tests/xtensorblas/: CMakeLists.txt  main.cpp
